# job-fit-analyzer

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/data/: majors_seed.json  skills_seed.json
src/jobfit/: analyze.py  cli.py
src/jobfit/extract/: education.py  experience.py  requirements.py  skills.py
src/jobfit/ingest/: pdf_extract.py
src/jobfit/preprocess/: normalize.py
src/jobfit/score/: education_scoring.py  experience_scoring.py  scoring.py
src/tests/: experience.py  test_jd_skills.py  test_normalize.py  test_requirements.py  test_scoring.py  test_skills_match.py
src/tests/fixtures/: sample_jd.txt  sample_resume.txt
