[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-fit-analyzer"
version = "0.1.0"
description = "CLI and Streamlit tool to compare a resume and job description."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jobfit", "jobfit.*"]
